//
//  Copyright (c) 2018 Open Whisper Systems. All rights reserved.
//

#import "TSMessage.h"

NS_ASSUME_NONNULL_BEGIN


#define kCurrentProtocolVersion 10
typedef NS_ENUM(NSInteger, TSOutgoingMessageState) {
    // The message is either:
    // a) Enqueued for sending.
    // b) Waiting on attachment upload(s).
    // c) Being sent to the service.
    TSOutgoingMessageStateSending,
    // The failure state.
    TSOutgoingMessageStateFailed,
    // These two enum values have been combined into TSOutgoingMessageStateSent.
    TSOutgoingMessageStateSent_OBSOLETE,
    TSOutgoingMessageStateDelivered_OBSOLETE,
    // The message has been sent to the service.
    TSOutgoingMessageStateSent,
};

NSString *NSStringForOutgoingMessageState(TSOutgoingMessageState value);

typedef NS_ENUM(NSInteger, OWSOutgoingMessageRecipientState) {
    // Message could not be sent to recipient.
    OWSOutgoingMessageRecipientStateFailed = 0,
    // Message is being sent to the recipient (enqueued, uploading or sending).
    OWSOutgoingMessageRecipientStateSending,
    // The message was not sent because the recipient is not valid.
    // For example, this recipient may have left the group.
    OWSOutgoingMessageRecipientStateSkipped,
    // The message has been sent to the service.  It may also have been delivered or read.
    OWSOutgoingMessageRecipientStateSent,

    OWSOutgoingMessageRecipientStateMin = OWSOutgoingMessageRecipientStateFailed,
    OWSOutgoingMessageRecipientStateMax = OWSOutgoingMessageRecipientStateSent,
};

NSString *NSStringForOutgoingMessageRecipientState(OWSOutgoingMessageRecipientState value);

typedef NS_ENUM(NSInteger, TSGroupMetaMessage) {
    TSGroupMessageUnspecified,
    TSGroupMessageNew,
    TSGroupMessageUpdate,
    TSGroupMessageDeliver,
    TSGroupMessageQuit,
    TSGroupMessageRequestInfo,
};

typedef NS_ENUM(NSInteger, TSGroupChatMode) {
    TSGroupChatModeEndToEnds = 0, // signal 协议
    TSGroupChatModeEndToServer = 1, // 通道加密
    TSGroupChatModePin = 2,
};

@class DSKProtoAttachmentPointer;
@class DSKProtoContentBuilder;
@class DSKProtoDataMessageBuilder;
@class SignalRecipient;
@class DTRapidFile;
@class DTOutgoingMessageServerReceipts;

@interface TSOutgoingMessageRecipientState : MTLModel

@property (atomic) OWSOutgoingMessageRecipientState state;
// This property should only be set if state == .sent.
@property (atomic, nullable) NSNumber *deliveryTimestamp;
// This property should only be set if state == .sent.
@property (atomic, nullable) NSNumber *readTimestamp;

@end

#pragma mark -

@interface TSOutgoingMessage : TSMessage

// --- CODE GENERATION MARKER

// This snippet is generated by /Scripts/sds_codegen/sds_generate.py. Do not manually edit it, instead run `sds_codegen.sh`. Please contact Kris for support.

// clang-format off

- (instancetype)initWithGrdbId:(int64_t)grdbId
                      uniqueId:(NSString *)uniqueId
        associatedUniqueThreadId:(NSString *)associatedUniqueThreadId
                notifySequenceId:(uint64_t)notifySequenceId
             receivedAtTimestamp:(uint64_t)receivedAtTimestamp
                      sequenceId:(uint64_t)sequenceId
                 serverTimestamp:(uint64_t)serverTimestamp
                       timestamp:(uint64_t)timestamp
                  uniqueThreadId:(NSString *)uniqueThreadId
                       atPersons:(nullable NSString *)atPersons
                   attachmentIds:(NSArray<NSString *> *)attachmentIds
                            body:(nullable NSString *)body
                            card:(nullable DTCardMessageEntity *)card
                    cardUniqueId:(nullable NSString *)cardUniqueId
                     cardVersion:(unsigned int)cardVersion
       combinedForwardingMessage:(nullable DTCombinedForwardingMessage *)combinedForwardingMessage
                    contactShare:(nullable OWSContact *)contactShare
                        editable:(BOOL)editable
                   envelopSource:(nullable NSString *)envelopSource
                 expireStartedAt:(uint64_t)expireStartedAt
                       expiresAt:(uint64_t)expiresAt
                expiresInSeconds:(unsigned int)expiresInSeconds
                 isPinnedMessage:(BOOL)isPinnedMessage
                        mentions:(nullable NSArray<DTMention *> *)mentions
                 messageModeType:(TSMessageModeType)messageModeType
                           pinId:(nullable NSString *)pinId
                   quotedMessage:(nullable TSQuotedMessage *)quotedMessage
                     reactionMap:(nullable NSDictionary<NSString *,NSArray<DTReactionSource *> *> *)reactionMap
                 reactionMessage:(nullable DTReactionMessage *)reactionMessage
                          recall:(nullable DTRecallMessage *)recall
    storedShouldStartExpireTimer:(BOOL)storedShouldStartExpireTimer
                translateMessage:(nullable DTTranslateMessage *)translateMessage
              whisperMessageType:(TSWhisperMessageType)whisperMessageType
                   customMessage:(NSString *)customMessage
                   groupChatMode:(TSGroupChatMode)groupChatMode
                groupMetaMessage:(TSGroupMetaMessage)groupMetaMessage
             hasSyncedTranscript:(BOOL)hasSyncedTranscript
              isFromLinkedDevice:(BOOL)isFromLinkedDevice
                  isVoiceMessage:(BOOL)isVoiceMessage
           mostRecentFailureText:(NSString *)mostRecentFailureText
                      rapidFiles:(NSArray<DTRapidFile *> *)rapidFiles
               recipientStateMap:(nullable NSDictionary<NSString *,TSOutgoingMessageRecipientState *> *)recipientStateMap
                  sourceDeviceId:(unsigned int)sourceDeviceId
              storedMessageState:(TSOutgoingMessageState)storedMessageState
NS_DESIGNATED_INITIALIZER NS_SWIFT_NAME(init(grdbId:uniqueId:associatedUniqueThreadId:notifySequenceId:receivedAtTimestamp:sequenceId:serverTimestamp:timestamp:uniqueThreadId:atPersons:attachmentIds:body:card:cardUniqueId:cardVersion:combinedForwardingMessage:contactShare:editable:envelopSource:expireStartedAt:expiresAt:expiresInSeconds:isPinnedMessage:mentions:messageModeType:pinId:quotedMessage:reactionMap:reactionMessage:recall:storedShouldStartExpireTimer:translateMessage:whisperMessageType:customMessage:groupChatMode:groupMetaMessage:hasSyncedTranscript:isFromLinkedDevice:isVoiceMessage:mostRecentFailureText:rapidFiles:recipientStateMap:sourceDeviceId:storedMessageState:));

// clang-format on

// --- CODE GENERATION MARKER

- (instancetype)initMessageWithTimestamp:(uint64_t)timestamp
                                inThread:(nullable TSThread *)thread
                             messageBody:(nullable NSString *)body
                               atPersons:(nullable NSString *)atPersons
                                mentions:(nullable NSArray <DTMention *> *)mentions
                           attachmentIds:(NSArray<NSString *> *)attachmentIds
                        expiresInSeconds:(uint32_t)expiresInSeconds
                         expireStartedAt:(uint64_t)expireStartedAt
                           quotedMessage:(nullable TSQuotedMessage *)quotedMessage
                       forwardingMessage:(nullable DTCombinedForwardingMessage *)forwardingMessage
                            contactShare:(nullable OWSContact *)contactShare NS_UNAVAILABLE;

- (instancetype)initOutgoingMessageWithTimestamp:(uint64_t)timestamp
                                        inThread:(nullable TSThread *)thread
                                     messageBody:(nullable NSString *)body
                                       atPersons:(nullable NSString *)atPersons
                                        mentions:(nullable NSArray <DTMention *> *)mentions
                                   attachmentIds:(NSMutableArray<NSString *> *)attachmentIds
                                expiresInSeconds:(uint32_t)expiresInSeconds
                                 expireStartedAt:(uint64_t)expireStartedAt
                                  isVoiceMessage:(BOOL)isVoiceMessage
                                groupMetaMessage:(TSGroupMetaMessage)groupMetaMessage
                                   quotedMessage:(nullable TSQuotedMessage *)quotedMessage
                               forwardingMessage:(nullable DTCombinedForwardingMessage *)forwardingMessage
                                    contactShare:(nullable OWSContact *)contactShare NS_DESIGNATED_INITIALIZER;

- (nullable instancetype)initWithCoder:(NSCoder *)coder NS_DESIGNATED_INITIALIZER;

+ (instancetype)outgoingMessageInThread:(nullable TSThread *)thread
                            messageBody:(nullable NSString *)body
                              atPersons:(nullable NSString *)atPersons
                               mentions:(nullable NSArray <DTMention *> *)mentions
                           attachmentId:(nullable NSString *)attachmentId;

+ (instancetype)outgoingMessageInThread:(nullable TSThread *)thread
                            messageBody:(nullable NSString *)body
                              atPersons:(nullable NSString *)atPersons
                               mentions:(nullable NSArray <DTMention *> *)mentions
                           attachmentId:(nullable NSString *)attachmentId
                       expiresInSeconds:(uint32_t)expiresInSeconds;

+ (instancetype)outgoingMessageInThread:(nullable TSThread *)thread
                            messageBody:(nullable NSString *)body
                              atPersons:(nullable NSString *)atPersons
                               mentions:(nullable NSArray <DTMention *> *)mentions
                           attachmentId:(nullable NSString *)attachmentId
                       expiresInSeconds:(uint32_t)expiresInSeconds
                          quotedMessage:(nullable TSQuotedMessage *)quotedMessage
                      forwardingMessage:(nullable DTCombinedForwardingMessage *)forwardingMessage;

+ (instancetype)outgoingMessageInThread:(nullable TSThread *)thread
                       groupMetaMessage:(TSGroupMetaMessage)groupMetaMessage
                              atPersons:(nullable NSString *)atPersons
                               mentions:(nullable NSArray <DTMention *> *)mentions
                       expiresInSeconds:(uint32_t)expiresInSeconds;

@property (readonly) TSOutgoingMessageState messageState;
@property (readonly) BOOL wasDeliveredToAnyRecipient;

@property (atomic, readonly) BOOL hasSyncedTranscript;
@property (atomic, readonly) NSString *customMessage;
@property (atomic, readonly) NSString *mostRecentFailureText;
// A map of attachment id-to-"source" filename.
//@property (nonatomic, readonly) NSMutableDictionary<NSString *, NSString *> *attachmentFilenameMap;

@property (atomic, readonly) TSGroupMetaMessage groupMetaMessage;

@property (nonatomic, readonly) BOOL isVoiceMessage;

// This property won't be accurate for legacy messages.
@property (atomic, readonly) BOOL isFromLinkedDevice;

@property (nonatomic, readonly) BOOL isSilent;

@property (nonatomic, strong) NSArray<DTRapidFile *> *rapidFiles;

@property (nonatomic, assign) UInt32 sourceDeviceId;

@property (nonatomic, assign) TSGroupChatMode groupChatMode;

@property (nullable) NSDictionary<NSString *, TSOutgoingMessageRecipientState *> *recipientStateMap;

- (void)updateRecipientStateMapWithThread:(TSThread *)thread state:(OWSOutgoingMessageRecipientState)state;


- (void)sendingWithRemovedGroupMembers:(NSSet *)members;

/**
 * The data representation of this message, to be encrypted, before being sent.
 */
- (nullable NSData *)buildPlainTextData:(SignalRecipient *)recipient;

/**
 * The data representation of this  clientNotifymessage, to be encrypted, before being sent  default is nil, rebuild it by subclass.
 */
- (nullable NSData *)buildClientNotifyData:(SignalRecipient *)recipient;

/**
 * Intermediate protobuf representation
 * Subclasses can augment if they want to manipulate the data message before building.
 */
- (DSKProtoDataMessageBuilder *)dataMessageBuilder;

/**
 * Should this message be synced to the users other registered devices? This is
 * generally always true, except in the case of the sync messages themseleves
 * (so we don't end up in an infinite loop).
 */
- (BOOL)shouldSyncTranscript;

- (BOOL)shouldBeSaved;

// All recipients of this message.
- (NSArray<NSString *> *)recipientIds;

// All recipients of this message who we are currently trying to send to (queued, uploading or during send).
- (NSArray<NSString *> *)sendingRecipientIds;

// All recipients of this message to whom it has been sent and delivered.
- (NSArray<NSString *> *)deliveredRecipientIds;

// All recipients of this message to whom it has been sent, delivered and read.
- (NSArray<NSString *> *)readRecipientIds;

// Number of recipients of this message to whom it has been sent.
- (NSUInteger)sentRecipientsCount;

- (nullable TSOutgoingMessageRecipientState *)recipientStateForRecipientId:(NSString *)recipientId;

#pragma mark - Update With... Methods

// This method is used to record a successful send to one recipient.
- (void)updateWithSentRecipient:(NSString *)recipientId
                 serverReceipts:(nullable DTOutgoingMessageServerReceipts *)serverReceipts
                    transaction:(SDSAnyWriteTransaction *)transaction;

// This method is used to record a skipped send to one recipient.
- (void)updateWithSkippedRecipient:(NSString *)recipientId transaction:(SDSAnyWriteTransaction *)transaction;

// On app launch, all "sending" recipients should be marked as "failed".
- (void)updateWithAllSendingRecipientsMarkedAsFailedWithTansaction:(SDSAnyWriteTransaction *)transaction;

- (void)updateWithAllRecipientsMarkedAsSentWithServerReceipts:(DTOutgoingMessageServerReceipts *)serverReceipts
                                                  transaction:(SDSAnyWriteTransaction *)transaction;

// When we start a message send, all "failed" recipients should be marked as "sending".
- (void)updateWithMarkingAllUnsentRecipientsAsSendingWithTransaction:(SDSAnyWriteTransaction *)transaction;

// This method is used to forge the message state for fake messages.
//
// NOTE: This method should only be used by Debug UI, etc.
- (void)updateWithFakeMessageState:(TSOutgoingMessageState)messageState
                       transaction:(SDSAnyWriteTransaction *)transaction;

// This method is used to record a failed send to all "sending" recipients.
// 注意外层是否有 transaction
- (void)updateWithSendingError:(NSError *)error;

- (void)updateWithHasSyncedTranscript:(BOOL)hasSyncedTranscript
                          transaction:(SDSAnyWriteTransaction *)transaction;
- (void)updateWithCustomMessage:(NSString *)customMessage transaction:(SDSAnyWriteTransaction *)transaction;
- (void)updateWithCustomMessage:(NSString *)customMessage;

// This method is used to record a successful delivery to one recipient.
//
// deliveryTimestamp is an optional parameter, since legacy
// delivery receipts don't have a "delivery timestamp".  Those
// messages repurpose the "timestamp" field to indicate when the
// corresponding message was originally sent.
- (void)updateWithDeliveredRecipient:(NSString *)recipientId
                   deliveryTimestamp:(NSNumber *_Nullable)deliveryTimestamp
                         transaction:(SDSAnyWriteTransaction *)transaction;

- (void)updateWithWasSentFromLinkedDevice;

// This method is used to rewrite the recipient list with a single recipient.
// It is used to reply to a "group info request", which should only be
// delivered to the requestor.
- (void)updateWithSendingToSingleGroupRecipient:(NSString *)singleGroupRecipient
                                    transaction:(SDSAnyWriteTransaction *)transaction;

// This method is used to record a successful "read" by one recipient.
- (void)updateWithReadRecipientId:(NSString *)recipientId
                    readTimestamp:(uint64_t)readTimestamp
                      transaction:(SDSAnyReadTransaction *)transaction;

- (nullable NSNumber *)firstRecipientReadTimestamp;

- (NSString *)statusDescription;

- (NSString *)collapseId;

//- (BOOL)recipientsContainsBot;

+ (nullable instancetype)findSyncMessageWithTimestamp:(uint64_t)timestamp
                                          transaction:(SDSAnyWriteTransaction *)transaction;

//修改关键{sourceDeviceId, timestamp}参数后, 需要重置；
- (void)resetUniqueIdWithTransaction:(SDSAnyWriteTransaction *)transaction;

- (void)resetRecipientStateMapWithThread:(TSThread *)thread;

@end

NS_ASSUME_NONNULL_END
